{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 45,
  "lineage": "3ecb0109-97b5-3230-9b5d-7dbd2aa63b35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975050071559:instance/i-0d020eddce4cefa7a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d020eddce4cefa7a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevSecOps",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f004b9d9210306ba",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-98-84-122-136.compute-1.amazonaws.com",
            "public_ip": "98.84.122.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050071559:key/28d5974e-b266-493d-a586-4d90b6e7f91c",
                "throughput": 125,
                "volume_id": "vol-0ae75d938ed59f919",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c80edf0bf40e0c70",
            "tags": {
              "Environment": "Dev",
              "Name": "base-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "base-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5c23f322230cf8d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public-subnet",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975050071559:instance/i-07142d5b878c0ddde",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07142d5b878c0ddde",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevSecOps",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088a8cdf780a5a466",
            "private_dns": "ip-10-0-2-64.ec2.internal",
            "private_ip": "10.0.2.64",
            "public_dns": "ec2-54-204-80-194.compute-1.amazonaws.com",
            "public_ip": "54.204.80.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050071559:key/28d5974e-b266-493d-a586-4d90b6e7f91c",
                "throughput": 125,
                "volume_id": "vol-0d5f88f2aab972ba0",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083387da46139f946",
            "tags": {
              "Environment": "Dev",
              "Name": "base-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "base-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5c23f322230cf8d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public-subnet",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:975050071559:instance/i-044e023061175e493",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044e023061175e493",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevSecOps",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d44f336dbcc6d071",
            "private_dns": "ip-10-0-3-241.ec2.internal",
            "private_ip": "10.0.3.241",
            "public_dns": "ec2-98-82-21-218.compute-1.amazonaws.com",
            "public_ip": "98.82.21.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:975050071559:key/28d5974e-b266-493d-a586-4d90b6e7f91c",
                "throughput": 125,
                "volume_id": "vol-07419fb5b07a575aa",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0138040499924234d",
            "tags": {
              "Environment": "Dev",
              "Name": "base-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "base-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5c23f322230cf8d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:internet-gateway/igw-0ffb6db422427bb05",
            "id": "igw-0ffb6db422427bb05",
            "owner_id": "975050071559",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-IGW",
              "Owner": "Infrastructure Team",
              "Project": "MyProject"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-IGW",
              "Owner": "Infrastructure Team",
              "Project": "MyProject"
            },
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:route-table/rtb-0f7452cc9fd7d11c9",
            "id": "rtb-0f7452cc9fd7d11c9",
            "owner_id": "975050071559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-rt",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-rt",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:route-table/rtb-052398ba0b1fb124d",
            "id": "rtb-052398ba0b1fb124d",
            "owner_id": "975050071559",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffb6db422427bb05",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-rt",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-rt",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043aa07ede405c256",
            "route_table_id": "rtb-0f7452cc9fd7d11c9",
            "subnet_id": "subnet-0ead1382346dbf0b8"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0876d2c4e56b09c5a",
            "route_table_id": "rtb-0f7452cc9fd7d11c9",
            "subnet_id": "subnet-0f30f0fb758c3d135"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09202f37501552af2",
            "route_table_id": "rtb-0f7452cc9fd7d11c9",
            "subnet_id": "subnet-04bf20fb9c9e0d3ab"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042de27b6585e017d",
            "route_table_id": "rtb-052398ba0b1fb124d",
            "subnet_id": "subnet-0c80edf0bf40e0c70"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.public",
            "aws_subnet.public-subnet",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0330ac314b13cdb0a",
            "route_table_id": "rtb-052398ba0b1fb124d",
            "subnet_id": "subnet-083387da46139f946"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.public",
            "aws_subnet.public-subnet",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072db24d7bd8ea844",
            "route_table_id": "rtb-052398ba0b1fb124d",
            "subnet_id": "subnet-0138040499924234d"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-IGW",
            "aws_route_table.public",
            "aws_subnet.public-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:security-group/sg-0c5c23f322230cf8d",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5c23f322230cf8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "975050071559",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-allow-ssh-sg",
              "Owner": "Infrastructure Team",
              "Project": "MyProject"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-allow-ssh-sg",
              "Owner": "Infrastructure Team",
              "Project": "MyProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:subnet/subnet-0ead1382346dbf0b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead1382346dbf0b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050071559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-us-east-1a",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private",
              "Type": "Subnet"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-us-east-1a",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:subnet/subnet-0f30f0fb758c3d135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f30f0fb758c3d135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050071559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-us-east-1b",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private",
              "Type": "Subnet"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-us-east-1b",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:subnet/subnet-04bf20fb9c9e0d3ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bf20fb9c9e0d3ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050071559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-us-east-1c",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private",
              "Type": "Subnet"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-private-us-east-1c",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Private",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:subnet/subnet-0c80edf0bf40e0c70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c80edf0bf40e0c70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050071559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-us-east-1a",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public",
              "Type": "Subnet"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-us-east-1a",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:subnet/subnet-083387da46139f946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083387da46139f946",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050071559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-us-east-1b",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public",
              "Type": "Subnet"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-us-east-1b",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:subnet/subnet-0138040499924234d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0138040499924234d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050071559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-us-east-1c",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public",
              "Type": "Subnet"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc-public-us-east-1c",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Tier": "Public",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0657cd1cbbc4d3dde"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050071559:vpc/vpc-0657cd1cbbc4d3dde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078ddc3ed0ed4a2e5",
            "default_route_table_id": "rtb-054a107f72e8c3502",
            "default_security_group_id": "sg-0be64d0684400b8fb",
            "dhcp_options_id": "dopt-0730693c66d7db71c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0657cd1cbbc4d3dde",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054a107f72e8c3502",
            "owner_id": "975050071559",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Type": "VPC"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "MyProject-Dev-vpc",
              "Owner": "Infrastructure Team",
              "Project": "MyProject",
              "Type": "VPC"
            }
          }
        }
      ]
    }
  ]
}